--- a/packages/battery/low_batteries.yaml
+++ b/packages/battery/low_batteries.yaml
@@ -6,12 +6,12 @@ template:
         state: "{{this.attributes.entities | length}}"
         attributes:
           entities: |
-            {% set tracked_batterie = label_entities("Suivi Batterie") %}
-            [
-              {% for
-                entity in tracked_batterie %}
-                  {% if states(entity) | float(100) <= 20 %}
-                    "{{ state_attr(entity,'friendly_name') }}",
-                  {% endif %}
-              {% endfor %}
-            ]
+            {% for
+              entity in
+                expand(states.binary_sensor)
+                | selectattr('attributes.device_class', 'defined')
+                | selectattr('attributes.device_class', 'eq', 'battery') %}
+              {% if entity.state == "on" %}
+                  "{{ entity.attributes.friendly_name }}",
+              {% endif %}
+            {% endfor %}
