--- a/automations.yaml
+++ b/automations.yaml
@@ -1351,20 +1351,6 @@
           entity_id: light.exterieur
   mode: parallel
   max: 10
-- id: '1689530050696'
-  alias: Pulse - Arrêter
-  description: ''
-  trigger:
-  - platform: time
-    at: input_datetime.pulse_end_time
-  condition: []
-  action:
-  - action: light.turn_off
-    data: {}
-    target:
-      entity_id:
-      - light.2d_matrix
-  mode: single
 - id: '1690826979664'
   alias: "Assist - \U0001F4E3 Commandes Multiple "
   description: ''
@@ -4144,3 +4130,44 @@
       - binary_sensor.capteur_ouverture_fenetre_bureau
       room_openings_duration: 00:05:00
       outside_temperature: sensor.floirac_temperature
+- id: '1726666291089'
+  alias: Pulse - Allumer / Éteindre
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+    - binary_sensor.capteur_presence_bureau_occupancy
+    - input_boolean.automation_matrix_2d
+    - input_datetime.pulse_end_schedule
+    - input_datetime.pulse_start_schedule
+  - platform: time
+    at: input_datetime.pulse_start_schedule
+  - platform: time
+    at: input_datetime.pulse_end_schedule
+  - platform: homeassistant
+    event: start
+  condition: []
+  action:
+  - if:
+    - condition: state
+      entity_id: binary_sensor.capteur_presence_bureau_occupancy
+      state: 'on'
+    - condition: time
+      after: input_datetime.pulse_start_schedule
+      before: input_datetime.pulse_end_schedule
+    - condition: state
+      entity_id: input_boolean.automation_matrix_2d
+      state: 'on'
+    then:
+    - action: light.turn_on
+      metadata: {}
+      data: {}
+      target:
+        entity_id: light.2d_matrix
+    else:
+    - action: light.turn_off
+      metadata: {}
+      data: {}
+      target:
+        entity_id: light.2d_matrix
+  mode: single
